# TianGong-LCA-Spec-Coding

./: .gitignore  AGENTS.md  AGENTS_ZH.md  CHANGELOG.md  README.md  pyproject.toml
.github/: process_from_flow.md
.github/prompts/: convert_json.prompt.md  convert_json.zh.prompt.md  extract-process-workflow.prompt.md  extract-process-workflow.zh.prompt.md  lca-spec-coding.prompt.md  lca-workflow.prompt.md  process_from_flow.prompt.md  process_from_flow.zh.prompt.md  product_flow_insert_manual.md  product_flow_insert_manual.prompt.md  product_flow_insert_manual_zh.md  product_flow_insert_manual_zh.prompt.md  product_flow_sdk_insert.prompt.md  product_flow_sdk_insert.zh.prompt.md
.secrets/: secrets.example.toml
artifacts/: run_log.txt  test_workflow_output.json  test_workflow_output_debug.json  test_workflow_output_llm.json  tidas_last_error.txt
backup/: 10.TIDAS校验.yml  2.流数据获取 (通过MCP).yml  3.流数据提取替换.yml  6.最终完整lca数据提取 (1).yml  process_classification.json  product_flow_classification.json
docs/: database_crud_tool.md
scripts/: __init__.py  _level_hierarchy_cli.py  _workflow_common.py  convert_prompt_to_inline.py  flow_property_cli.py  list_elementary_flow_category_children.py  list_flow_category_children.py  list_location_children.py  list_process_category_children.py  list_product_flow_category_children.py  merge_flow_cn_names.py  run_test_workflow.py  stage1_preprocess.py  stage2_extract_processes.py  stage3_align_flows.py  stage4_merge_datasets.py  stage4_publish.py  stage5_validate.py  stage6_finalize.py  stage7_publish.py
scripts/jsonld/: __init__.py  jsonld_inline_run.py  run_pipeline.py  stage1_jsonld_extract.py  stage2_jsonld_validate.py  stage3_jsonld_publish.py
scripts/kb/: __init__.py  import_ris.py  minio_fetch.py  retrieve.py
scripts/md/: _workflow_common.py  bulk_insert_product_flows.py  convert_prompt_to_inline.py  flow_property_cli.py  list_elementary_flow_category_children.py  list_location_children.py  list_process_category_children.py  list_product_flow_category_children.py  run_test_workflow.py  stage1_preprocess.py  stage2_extract_processes.py  stage3_align_flows.py  stage4_publish.py
scripts/origin/: mineru_for_process_si.py  process_from_flow_build_sources.py  process_from_flow_download_si.py  process_from_flow_langgraph.py  process_from_flow_reference_usability.py  process_from_flow_workflow.py  product_flow_sdk_insert.py
scripts/product_flow/: product_flow_sdk_insert.py
scripts_jsonld/: convert_prompt_to_inline.py  jsonld_inline_run.py  run_pipeline.py  stage1_jsonld_extract.py  stage2_jsonld_validate.py  stage3_jsonld_publish.py
src/tiangong_lca_spec/core/: __init__.py  config.py  constants.py  exceptions.py  json_utils.py  logging.py  mcp_client.py  models.py  uris.py
src/tiangong_lca_spec/flow_alignment/: selector.py  service.py
src/tiangong_lca_spec/flow_search/: client.py  (+2 more)
test/: test_exchange_validation.py  test_flow_alignment.py  test_flow_search_service.py  test_jsonld_converters.py  test_orchestrator_tidas.py  test_preprocess_numeric_cleanup.py  test_process_from_flow.py  test_product_flow_creation_service.py  test_product_flow_dedup.py  test_publishing.py  test_reference_year_extraction.py  test_scientific_references.py
test/data/: battery.json  new-test-1.json  response_1761722018312.json  test-paper.json  test_process.json
test/scripts/: test_flow_property_cli.py  test_kb_import.py  test_kb_retrieve.py
test/tidas/: test_flow_property_registry.py
(+35 files in other folders)
