[project]
name = "tiangong-lca-spec"
version = "0.1.0"
description = "Structured orchestration pipeline for Tiangong LCA spec coding."
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.12.2",
    "pydantic-settings>=2.11.0",
    "tenacity>=9.1.2",
    "structlog>=25.4.0",
    "langchain-core>=0.3.79",
    "langgraph>=0.6.10",
    "langchain-mcp-adapters>=0.1.11",
    "python-dotenv>=1.1.1",
    "jsonschema>=4.25.1",
    "openai>=2.5.0",
]

[dependency-groups]
dev = ["black>=25.9.0", "ruff>=0.14.1", "pytest>=8.4.2"]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.uv.sources]
tiangong-lca-spec = { path = "src" }

[tool.uv.workspace]
members = ["."]

[tool.hatch.build.targets.wheel]
packages = ["src/tiangong_lca_spec"]

[tool.hatch.build.targets.sdist]
include = ["src/tiangong_lca_spec", "README.md", "pyproject.toml"]

[tool.black]
line-length = 100
target-version = ["py312"]
include = "\\.pyi?$"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
