[project]
name = "tiangong-lca-spec"
version = "0.1.0"
description = "Structured orchestration pipeline for Tiangong LCA spec coding."
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "tenacity>=9.1.2",
    "structlog>=25.4.0",
    "anyio>=4.11.0",
    "httpx>=0.28.1",
    "mcp>=1.18.0",
    "python-dotenv>=1.1.1",
    "jsonschema>=4.25.1",
    "openai>=2.6.0",
    "tidas-tools>=0.0.18"
]

[dependency-groups]
dev = ["black>=25.9.0", "ruff>=0.14.1", "pytest>=8.4.2"]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.uv.sources]
tiangong-lca-spec = { path = "src" }

[tool.uv.workspace]
members = ["."]

[tool.hatch.build.targets.wheel]
packages = ["src/tiangong_lca_spec"]

[tool.hatch.build.targets.sdist]
include = ["src/tiangong_lca_spec", "README.md", "pyproject.toml"]

[tool.black]
line-length = 192
target-version = ["py312"]
include = "\\.pyi?$"

[tool.ruff]
line-length = 192
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
